# CS301-Final-Project

./: .gitignore  .gitmodules  228_training_aerial_imagery.py  README.md  baseline-performance.md  kaggle.json  main.py  model.py  model_compression.py  pyproject.toml  test.py
docs/: baseline-performace.md  hyperparameter-optimization.md  knowledge-distillation.md
milestone-2-v2/: saved_model.pb
milestone-2-v2/variables/: variables.index
milestone-3/: saved_model.pb
milestone-3-v2/: saved_model.pb
milestone-3-v2/variables/: variables.index
milestone-3/variables/: variables.index
nni_hello_hpo/: main.py
